talk/slides.css
@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');

:root {
  --font-size-min: 16px;
  --font-size-max: 64px;
  --bg-color: #08131c;
  --bg-color-2: #0a0c13;
  --text-color: #ffffff;
  --headline-color: #2fafff;
  --link-color: #2f7fff;

  --slide-dot-color: var(--headline-color);
  --slide-dot-border-color: var(--text-color);
  --slide-dot-color--selected: var(--bg-color);
  --slide-dot-color--revealed: #7fc;

  --code-bg-color: #222;
  --code-fg-color: #7fc;

}

@media (prefers-color-scheme: light) {
  :root {
    --bg-color: #f7faff;
    --bg-color-2: #ffffff;
    --text-color: #121224;
    --headline-color: #1256cf;
    --link-color: #12347f;
    --code-bg-color: #fdf6e3;
    --code-fg-color: #586e75;
    --slide-dot-color--revealed: #173;
  }
}

::-webkit-scrollbar {
  width: 24px;
}

::-webkit-scrollbar-track {
  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  border: 1px solid black;
  background: linear-gradient(to bottom, deepskyblue 0%, deepskyblue 20%, 
    pink 20%, pink 40%, white 40%, white 60%, 
    pink 60%, pink 80%, deepskyblue 80%, deepskyblue 100%);
  box-shadow: inset 0 0 8px rgba(0,0,0,0.8); 
}

* {
  box-sizing: border-box;
}

body {
  background: var(--bg-color);
  background: linear-gradient(120deg, var(--bg-color) 0%, var(--bg-color) 50%, var(--bg-color-2) 50%);
  color: var(--text-color);
  font-family: 'Ubuntu', sans-serif;
  font-size: 28px;
  line-height: 1.8;
  margin: 0 auto;
  height: 100vh;
  overflow: hidden;
}

h1, h2, h3, h4, h5, h6 {
  color: var(--headline-color);
}

h1 {
  font-size: 1.5em;
  margin: 0;
}

h2 {
  font-size: 1.25em;
  margin: 0;
}

h3, h4, h5, h6 {
  font-size: 1.125em;
  margin: 0;
}

@media (min-width: 768px) {
  body {
    font-size: 36px;
  }
}

@media (min-width: 1280px) {
  body {
    font-size: 40px;
  }
}

@media (min-width: 1600px) {
  body {
    font-size: 44px;
  }
}

main {
  width: 100%;
  height: 100%;
  overflow-x: hidden;
}

@media (min-height: 600px) {
  main {
    scroll-snap-type: y mandatory;
  }
}

.scrollbehavior--smooth {
  scroll-behavior: smooth;
}


/** Slide dots ******************************/

nav {
  position: fixed;
  width: 100%;
  z-index: 2;
  bottom: 16px;
  padding: 0;
  display: flex;
  justify-content: center;
}

nav ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  max-width: 100vw;
  flex-wrap: wrap;
}

nav li {
  display: inline-block;
  margin: 0;
  padding: 0;
}

nav li a {
  font-size: 0;
  width: calc(1vw + 1vh + .5vmin);
  height: calc(1vw + 1vh + .5vmin);
  border-radius: 50%;
  margin: calc(.25vw + .25vh + .125vmin);
  background: var(--slide-dot-color);
  border: 2px solid var(--slide-dot-border-color);
  display: block
}


nav li a:focus, nav li.current a {
  background: var(--slide-dot-color--selected);
  animation: pulse 3s ease-in-out infinite;
}

nav li.revealed a, nav li.current.revealed a {
  border: 2px solid var(--slide-dot-color--revealed);
  background: var(--slide-dot-color--revealed);
}


@keyframes pulse {
  50% { transform: scale(1.2); }
}

/*******************************************************/

.slide {
  scroll-snap-align: start;
  max-width: 1440px;
  min-height: 100vh;
  margin: 0 auto;
  padding: 16px;
}

.slide__image img {
  width: 90vmin;
}


@media (min-width: 640px) {
  .slide__image {
    display: flex;
    justify-content: center;
    height: 50vh;
  }

  .slide__image img {
    width: auto;
    height: 100%;
  }
}

@media (min-width: 768px) {
  .slide__image {
    display: block;
    float: right;
    width: calc(55vmin + 10vmax);
    height: auto;
    margin: 0 0 0 2vmin;
  }

  .slide__image img {
    width: 100%;
  }
}

.clock {
  position: fixed;
  bottom: 16px;
  right: 32px;
  font-size: 14px;
}

a {
  color: var(--link-color);
  word-break: break-all;
}

p > code, li > code {
  background: var(--code-bg-color);
  color: var(--code-fg-color);
  border-radius: 2px;
  margin: 0 4px;
}


pre[class*=language-], code[class*=language-] {
  font-size: .8em;
}

.slide li {
  opacity: 1;
}

.slide li.hide {
  opacity: 0;
}

